--- a/css/main.css
+++ b/css/main.css
@@ -1,215 +1,209 @@
 /* Fonts */
 @font-face {
-    font-family: Roboto;
-    src: url("../fonts/Roboto-Regular.ttf");
+  font-family: "Fira Sans Regular";
+  src: url("../fonts/FiraSans-Regular.ttf");
 }
 
 @font-face {
-    font-family: Roboto-Light;
-    src: url("../fonts/Roboto-Light.ttf");
+  font-family: "Fira Sans Light";
+  src: url("../fonts/FiraSans-Light.ttf");
 }
 
 /* Animations */
 @keyframes fade-in {
-    from {opacity: 0;}
-    to {opacity: 1;}
+  from {
+    opacity: 0;
+  }
+  to {
+    opacity: 1;
+  }
 }
 
 /* Elements */
 a {
-    text-decoration: none;
+  text-decoration: none;
 }
 
 html {
-    margin: 0;
-    padding: 0;
-    height: 100%;
-    font-weight: 300;
+  margin: 0;
+  padding: 0;
+  height: 100%;
+  font-weight: 300;
 }
 
 body {
-    align-items: center;
-    background-color: #1f1f1f;
-    color: #ddd;
-    display: flex;
-    height: 100%;
-    justify-content: center;
-    margin: 0;
-    padding: 0;
+  align-items: center;
+  background-color: #121212;
+  color: #ddd;
+  display: flex;
+  height: 100%;
+  justify-content: center;
+  margin: 0;
+  padding: 0;
 }
 
 main {
-    animation-duration: 1s;
-    animation-name: fade-in;
-    font-family: Roboto-Light, sans-serif;
-    margin: auto;
-    width: 100%;
+  animation-duration: 1s;
+  animation-name: fade-in;
+  font-family: "Fira Sans Regular", sans-serif;
+  margin: auto;
+  width: 100%;
 }
 
 /* Classes */
 .links-container {
-    width: 100%;
+  width: 100%;
 }
 
 .link-section {
-    background-color: #353535;
-    padding: 10px;
-    overflow-y: auto;
-    box-shadow: 0px 0px 15px 2px #111;
+  background-color: #353535;
+  padding: 10px;
+  overflow-y: auto;
+  box-shadow: 2px 2px 2px 2px #111;
+  border-radius: 10px;
 }
 
 .link-section-title {
-    font-size: 20px;
-    margin: 0;
-    font-weight: normal;
+  font-size: 20px;
+  margin: 0;
+  font-weight: bold;
 }
 
 .link-list {
-    padding: 0;
+  padding: 0;
 }
 
 .link-list-item {
-    align-items: center;
-    display: flex;
-    height: 2em;
-    justify-content: center;
-    line-height: 2em;
-    list-style-type: none;
-    margin: 1vh 0 1vh 0;
-    text-align: center;
-    width: 100%;
+  align-items: center;
+  display: flex;
+  height: 2em;
+  justify-content: center;
+  line-height: 2em;
+  list-style-type: none;
+  margin: 1vh 0 1vh 0;
+  text-align: center;
+  width: 100%;
 }
 
 .link-list-item:hover {
-    background-color: #888;
+  background-color: #888;
 }
 
 .link {
-    color: #ddd;
-    display: block;
-    width: 100%;
-    height: 100%;
+  color: #ddd;
+  display: block;
+  width: 100%;
+  height: 100%;
 }
 
 .blue {
-    color: #48b1ff;
+  color: #4285f4;
 }
 
 .red {
-    color: #ff6b6b;
+  color: #db4437;
+}
+
+.yellow {
+  color: #f4b400;
 }
 
 .green {
-    color: #65ff66;
-}
-
-.purple {
-    color: #9348ff;
+  color: #0f9d58;
 }
 
 /* IDs */
 #clock {
-    font-family: Roboto;
+  font-family: "Fira Sans Regular";
+  font-weight: bold;
+  font-size: 48px;
 }
 
 #top-div {
-    display: grid;
-    grid-template-columns: 1fr;
-    grid-template-rows: 1fr 1fr;
-    grid-column-end: 5;
-    grid-column-start: 1;
-    text-align: center;
-    padding: 0 5vw 0 5vw;
+  display: grid;
+  grid-template-columns: 1fr;
+  grid-template-rows: 1fr 1fr;
+  grid-column-end: 5;
+  grid-column-start: 1;
+  text-align: center;
+  padding: 0 5vw 0 5vw;
 }
 
-#search-form, #clock-div {
-    align-items: center;
-    display: flex;
-    justify-content: center;
+#search-form,
+#clock-div {
+  align-items: center;
+  display: flex;
+  justify-content: center;
 }
 
 #search-bar-wrapper {
-    display: inline-block;
-    position: relative;
-    width: 100%;
+  display: inline-block;
+  position: relative;
+  width: 100%;
 }
 
-#search-bar, #search-bar-btn {
-    background-color: #353535;
-    border-color: #353535;
-    border-style: solid;
-    border-width: 1px;
+#search-bar,
+#search-bar-btn {
+  background-color: #353535;
+  border-color: #353535;
+  border-style: solid;
+  border-width: 0px;
 }
 
 #search-bar {
-    box-shadow: 0px 0px 15px 2px #111;
-    box-sizing: border-box;
-    color: #ddd;
-    font-size: 16px;
-    height: 25px;
-    padding: 0 25px 0 0;
-    text-align: center;
-    width: 100%;
+  box-shadow: 2px 2px 2px 2px #111;
+  box-sizing: border-box;
+  border-radius: 10px;
+  color: #ddd;
+  font-size: 16px;
+  height: 30px;
+  padding: 0 25px 0 0;
+  text-align: center;
+  width: 100%;
 }
 
-#search-bar-btn {
-    display: inline-block;
-    font-size: 16px;
-    height: 25px;
-    padding: 0 0 0 0;
-    position: absolute;
-    right: 0;
-    top: 0;
-    width: 25px;
-}
-
-#search-bar:focus, #search-bar:focus + #search-bar-btn {
-    border-color: #888;
+#search-bar:focus,
+#search-bar:focus {
+  border-color: #888;
 }
 
 #links-container {
-    column-gap: 0vw;
-    display: grid;
-    grid-column-gap: 0vw;
-    grid-row-gap: 5vh;
-    grid-template-columns: 1fr;
-    grid-template-rows: 1fr 1fr 1fr 1fr;
-    justify-content: center;
-    padding: 2vh 5vw 2vh 5vw;
-    row-gap: 5vh;
+  column-gap: 0vw;
+  display: grid;
+  grid-column-gap: 0vw;
+  grid-row-gap: 5vh;
+  grid-template-columns: 1fr;
+  grid-template-rows: 1fr 1fr 1fr 1fr;
+  justify-content: center;
+  padding: 2vh 5vw 2vh 5vw;
+  row-gap: 5vh;
 }
 
 /* Media Queries */
 @media only screen and (min-width: 600px) {
-
-    #links-container {
-        column-gap: 3vw;
-        grid-column-gap: 3vw;
-        grid-row-gap: 5vh;
-        grid-template-columns: 1fr 1fr;
-        grid-template-rows: 1fr 1fr;
-        row-gap: 5vh;
-    }
-
+  #links-container {
+    column-gap: 3vw;
+    grid-column-gap: 3vw;
+    grid-row-gap: 5vh;
+    grid-template-columns: 1fr 1fr;
+    grid-template-rows: 1fr 1fr;
+    row-gap: 5vh;
+  }
 }
 
 @media only screen and (min-width: 768px) {
-    
-    #links-container {
-        grid-template-columns: 1fr 1fr 1fr 1fr;
-        grid-template-rows: 1fr;
-    }
-
+  #links-container {
+    grid-template-columns: 1fr 1fr 1fr 1fr;
+    grid-template-rows: 1fr;
+  }
 }
 
 @media only screen and (min-width: 1200px) {
+  #top-div {
+    padding: 0 15vw 0 15vw;
+  }
 
-    #top-div {
-        padding: 0 15vw 0 15vw;
-    }
-
-    #links-container {
-        padding: 2vh 15vw 2vh 15vw;
-    }
-
+  #links-container {
+    padding: 2vh 15vw 2vh 15vw;
+  }
 }
